# RudolfVision

./: .gitignore  README.md  RudolfVision.sln
RudolfApp/: App.xaml  App.xaml.cs  MainWindow.xaml  RudolfApp.csproj
RudolfApp/Model/: FaceResult.cs
RudolfApp/Properties/: Settings.Designer.cs
RudolfApp/Services/: ImageProcessingService.cs  RudolfInterop.cs  WebcamCaptureService.cs
RudolfApp/Utils/: AsyncRelayCommand.cs  ImageConverter.cs  RelayCommand.cs  WebcamService.cs
RudolfApp/View/: MainWindow.xaml  MainWindow.xaml.cs
RudolfApp/ViewModel/: MainViewModel.cs
RudolfLib/: CMakeLists.txt  CMakeSettings.json  RudolfLib.sln  RudolfLib.vcxproj  RudolfLib.vcxproj.filters  pch.h
RudolfLib/RudolfLib/: RudolfLib.cpp  RudolfLib.vcxproj  RudolfLib.vcxproj.filters
RudolfLib/RudolfLib/dlib/all/: source.cpp
RudolfLib/include/: RudolfLib.h  RudolfProcessor.h
RudolfLib/mediapipe_graphs/test/: FileName.pbtxt
RudolfLib/proto/: FaceResult.proto
RudolfLib/src/: RudolfLib.cpp  RudolfProcessor.cpp
